<resources>
    <string name="app_name">FarmSales</string>
    <string name="send_otp">Send OTP</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or">Or</string>
    <string name="phone_number">Phone Number</string>
    <string name="mail">✉️ E-mail</string>
    <string name="enter_otp">Enter your OTP here</string>
    <string name="verify_otp">Enter Verification Code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="we_are_launching_soon">We Are Launching Soon…</string>
    <string name="didn_t_receive_the_code">Did not receive the code ?</string>
    <string name="we_have_sent_a_verification_code_to">We have sent a verification code to</string>
    <string name="eg_no">+91–1234567890</string>
    <string name="_1">0:60</string>
    <string name="facebook_application_id">1146828935792022</string>
    <string name="fb_login_protocol_scheme">fb1146828935792022</string>
    <string name="name">Name *</string>
    <string name="phone">Phone number *</string>
    <string name="your_full_name">Your full name</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="e_mail">E-mail *</string>
    <string name="your_email">Your e-mail</string>
    <string name="who_are_you">Who are you ?</string>
    <string name="farmer">Farmer</string>
    <string name="customer">Customer</string>
    <string name="agent">Agent</string>
    <string name="hope_you_enjoying_the_stay">Hope you are enjoying the stay</string>
    <string name="password">Password *</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="your_new_password">Your new password</string>
    <string name="submit">SUBMIT</string>
    <string name="share_something_about_you">Share something about you</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="todo">TODO</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="create_one">Create One</string>
    <string name="title_activity_home_main">HomeMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="label">Upi id</string>
    <string name="cart_continue">Continue</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="farmsales">Farmsales</string>
    <string name="product">Product Quantity</string>
    <string name="product_name">Product name</string>
    <string name="_20">₹20</string>
    <string name="amount_payable">Amount payable</string>
</resources>