<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/phone_num_view"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_marginStart="1dp"
        android:autofillHints=""
        android:background="@drawable/phone_num_input_box"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/otp_btn"
        app:layout_constraintEnd_toEndOf="@+id/otp_btn"
        app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/countryCodePicker"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:background="@drawable/code_input_box"
        app:layout_constraintBottom_toTopOf="@+id/otp_btn"
        app:layout_constraintStart_toStartOf="@+id/otp_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <Button
        android:id="@+id/otp_btn"
        android:layout_width="354dp"
        android:layout_height="45dp"
        android:layout_marginBottom="400dp"
        android:background="@drawable/otp_button"
        android:text="@string/send_otp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="354dp"
        android:layout_height="45dp"
        android:background="@drawable/otp_button"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/facebook_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/google_btn"
        app:layout_constraintTop_toBottomOf="@+id/otp_btn"
        app:layout_constraintVertical_bias="0.366" />

    <Button
        android:id="@+id/google_btn"
        android:layout_width="164dp"
        android:layout_height="45dp"
        android:background="@drawable/second_button"
        android:text="@string/google"
        android:textAlignment="center"
        app:icon="@drawable/ic_google"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/otp_btn"
        app:layout_constraintTop_toBottomOf="@+id/otp_btn"
        app:layout_constraintVertical_bias="0.755" />


    <Button
        android:id="@+id/facebook_btn"
        android:layout_width="164dp"
        android:layout_height="45dp"
        android:background="@drawable/second_button"
        android:text="@string/facebook"
        app:icon="@drawable/ic_facebook"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/otp_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/google_btn"
        app:layout_constraintTop_toBottomOf="@+id/otp_btn"
        app:layout_constraintVertical_bias="0.767"
        tools:ignore="ExtraText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/otp_btn"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/otp_btn"
        app:layout_constraintTop_toBottomOf="@+id/otp_btn"
        app:layout_constraintVertical_bias="0.229" />





</androidx.constraintlayout.widget.ConstraintLayout>