<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Verify_otp">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp"
        android:textSize="45sp"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"/>


    <EditText
        android:id="@+id/enter_otp"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="20"
        android:background="@drawable/otp_box"
        android:hint="@string/enter_otp"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        android:layout_marginBottom="30dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="80dp">

        <Button
            android:id="@+id/verify_otp"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:ems="8"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:background="@drawable/second_button"
            android:text="@string/verify_otp"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:ems="9"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:background="@drawable/second_button"
            android:text="@string/resend_otp"
            />

    </LinearLayout>

</LinearLayout>